[package]
name = "tensorism"
version = "0.1.2"
authors = ["Eddy Cizeron <eddy.cizeron@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "array", "multidimensional"]
categories = ["data-structures", "science"]
description = "Multidimensional arrays with bounds included in the type system."
documentation = "https://docs.rs/tensorism"
repository = "https://github.com/contactomorph/tensorism"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"

