[package]
name = "tensorism"
version = "0.2.0"
authors = ["Eddy Cizeron <eddy.cizeron@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["tensor", "array", "multidimensional"]
categories = ["data-structures", "science"]
description = "Multidimensional arrays with bounds included in the type system."
documentation = "https://docs.rs/tensorism"
repository = "https://github.com/contactomorph/tensorism"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
"quote" = "1.0.37"
"proc-macro2" = "1.0.89"

[dev-dependencies]
ndarray = "0.16.1"